--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Lists Lab</title>
-  </head>
-  <body>
-    <!-- Write your HTML in this file -->
-  </body>
-</html>
+<ul>
+  <li>2 slice of bread</li>
+  <li>4 slice of cheese
+    <ul>
+      <li>cheddar</Li>
+        <li>mozzarella</li>
+        <li>pepper jack</li>
+    </ul>
+    </li>
+    <li>1 tbsp of butter</li>
+</ul>
